--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -60,6 +66,7 @@ dependencies {
 
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     // glide
     implementation "com.github.bumptech.glide:glide:4.15.1"
@@ -87,4 +94,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation 'com.google.firebase:firebase-database:19.3.1'
+
+
+
+    // maps
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 }
