--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
