--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,9 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-database:19.3.1'
 
-
+///recycleview
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
 
     // maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
